create modules and ng-bootstrap

--- a/angular.json
+++ b/angular.json
@@ -24,10 +24,6 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": {
-              "base": "dist/tea-angular",
-              "browser": ""
-            },
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -65,9 +61,17 @@
                   "maximumError": "4kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "outputPath": {
+                "base": "docs",
+                "browser": ""
+              }
             },
             "development": {
+              "outputPath": {
+                "base": "dist/tea-angular",
+                "browser": ""
+              },
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true,
